--- a/NoteCutMinimizer/manifest.json
+++ b/NoteCutMinimizer/manifest.json
@@ -1,17 +1,17 @@
 ﻿{
   "$schema": "https://raw.githubusercontent.com/nike4613/ModSaber-MetadataFileSchema/master/Schema.json",
-  "author": "Kyle1413",
-  "description": "Allows you to skip intros and outros of songs that are longer than 5 seconds without any significant objects.",
+  "author": "CircuitLord",
+  "description": "A mod that lets you bring back the coolness of having note debris on in Beat Saber, without blocking your vision like it does normally.",
   "gameVersion": "1.6.0",
-  "id": "IntroSkip",
-  "name": "Intro Skip",
-  "version": "2.4.0",
+  "id": "NoteCutMinimizer",
+  "name": "NoteCutMinimizer",
+  "version": "1.1.1",
   "dependsOn": {
-    "BS Utils": "^1.3.0"
+    "BSIPA": "^3.13.4"
   },
   "links": {
-    "project-source": "https://github.com/Kylemc1413/Intro-Skip",
-    "donate": "https://ko-fi.com/kyle1413k"
+    "project-source": "https://github.com/CircuitLord/NoteCutMinimizer",
+    "donate": "https://www.paypal.com/cgi-bin/webscr?cmd=_donations&business=VEEKJW2CSJVZG&currency_code=USD&source=url"
   },
   "features": [
   ]
